# o2

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
lang/: README.md
lang/error/: error.o2
lang/interop/: interop.o2  link.o2
lang/net/: o2.mod  socket.o2  socket_win.o2
lang/stdio/: o2.mod  stdio.o2
lang/stdlib/: attribute.o2  o2.mod  stdlib.o2
src/cli/: channel.h  main.cpp
src/cli/commands/: base_command.h  build.cpp  build.h
src/parser/: bit.h  error.cpp  error.h  memory.cpp  memory.h  node.cpp  node.h  node_attribute.cpp  node_attribute.h  node_import.cpp  node_import.h  node_link.cpp  node_link.h  node_package.cpp  node_package.h  node_ref.cpp  node_ref.h  node_scope.cpp  node_scope.h  node_symbol.cpp  node_symbol.h  parser.cpp  parser.h  parser_scope.h  parser_state.cpp  parser_state.h  primitive_value.cpp  primitive_value.h  recursion_detector.cpp  recursion_detector.h  resolve_state.cpp  resolve_state.h  resolver.cpp  resolver.h  source_code.h  source_code_view.h  strings.h  syntax_tree.cpp  syntax_tree.h  token.cpp  (+1 more)
src/parser/collections/: vector.h
src/parser/functions/: node_expression.cpp  node_expression.h  node_func.cpp  node_func.h  node_func_arguments.cpp  node_func_arguments.h  node_func_body.cpp  node_func_body.h  node_func_const.cpp  node_func_const.h  node_func_method.cpp  node_func_method.h  node_func_parameters.cpp  node_func_parameters.h  node_func_returns.cpp  node_func_returns.h
src/parser/json/: json.h  json_serializable.cpp  json_serializable.h
src/parser/module/: module.cpp  module.h  module_package_lookup.cpp  module_package_lookup.h  module_source_code.cpp  module_source_code.h  node_module.cpp  node_module.h  system_modules.cpp  system_modules.h
src/parser/operations/: node_op.h  node_op_assign.cpp  node_op_assign.h  node_op_binop.cpp  node_op_binop.h  node_op_callfunc.cpp  node_op_callfunc.h  node_op_constant.cpp  node_op_constant.h  node_op_return.cpp  node_op_return.h  node_op_unaryop.cpp  node_op_unaryop.h
src/parser/optimizations/: primitive_value_add.cpp  primitive_value_add.h  primitive_value_bit_not.cpp  primitive_value_bit_not.h  primitive_value_compare.cpp  primitive_value_compare.h  primitive_value_dec.cpp  primitive_value_dec.h  primitive_value_equals.cpp  primitive_value_equals.h  primitive_value_inc.cpp  primitive_value_inc.h  primitive_value_neg.cpp  primitive_value_neg.h  primitive_value_not.cpp  primitive_value_not.h  primitive_value_not_equals.cpp  primitive_value_not_equals.h
src/parser/package/: node_package.cpp  node_package.h  node_root.cpp  node_root.h
src/parser/struct/: node_type_struct.cpp  node_type_struct.h  node_type_struct_field.cpp  node_type_struct_field.h  node_type_struct_inherits.cpp  node_type_struct_inherits.h  node_type_struct_methods.h  node_type_struct_static.cpp  node_type_struct_static.h
src/parser/struct/static/: node_type_struct_static.cpp  node_type_struct_static.h  node_type_struct_static_funcs.cpp  node_type_struct_static_funcs.h  node_type_struct_static_vars.cpp  node_type_struct_static_vars.h
src/parser/types/: node_type.cpp  node_type.h  node_type_accessor.cpp  node_type_accessor.h  node_type_array.cpp  node_type_array.h  node_type_implicit.cpp  node_type_implicit.h  node_type_known_ref.cpp  node_type_known_ref.h  node_type_pointer_of.cpp  node_type_pointer_of.h  node_type_primitive.cpp  node_type_primitive.h  node_type_ref.cpp  node_type_ref.h  node_type_reference_of.cpp  node_type_reference_of.h  node_type_struct.cpp  node_type_struct.h  node_type_struct_field.cpp  node_type_struct_field.h  node_type_struct_methods.cpp
src/parser/types/complex/: node_type_complex.cpp  node_type_complex.h  node_type_complex_field.cpp  node_type_complex_field.h  node_type_complex_inherits.cpp  node_type_complex_inherits.h  node_type_complex_methods.cpp  node_type_complex_methods.h
src/parser/types/interface/: node_type_interface.cpp  node_type_interface.h
src/parser/types/static/: node_type_static_scope.cpp  node_type_static_scope.h  node_type_static_scope_funcs.cpp  node_type_static_scope_funcs.h  node_type_static_scope_vars.cpp  node_type_static_scope_vars.h  node_type_struct_static_funcs.cpp  node_type_struct_static_funcs.h  node_type_struct_static_vars.h
src/parser/types/struct/: node_type_struct.cpp  node_type_struct.h  node_type_struct_field.cpp  node_type_struct_field.h  node_type_struct_inherits.cpp  node_type_struct_inherits.h  node_type_struct_methods.cpp  node_type_struct_methods.h
src/parser/variables/: node_constant_ref.h  node_named_variable.cpp  node_named_variable.h  node_var.cpp  node_var.h  node_var_const.cpp  node_var_const.h  node_var_this.cpp  node_var_this.h
src/tests/: main.cpp  test.h  utils.h
src/tests/attributes/: attributes.cpp
src/tests/attributes/one_on_const/: main.o2
src/tests/attributes/one_on_function/: main.o2
src/tests/attributes/one_on_type/: main.o2
src/tests/const/: const.cpp
src/tests/const/const_func/: main.o2
src/tests/const/const_global/: c.o2
src/tests/errors_parse/: errors_parse.cpp
src/tests/errors_parse/extern_func_with_body/: main.o2
src/tests/errors_parse/func_argument_type_specified/: main.o2
src/tests/errors_parse/func_arguments_not_closed/: main.o2
src/tests/errors_parse/func_arguments_not_closed2/: main.o2
src/tests/errors_parse/func_arguments_not_closed3/: main.o2
src/tests/errors_parse/func_scope_not_closed/: main.o2
src/tests/errors_parse/func_scope_scope_not_closed/: main.o2
src/tests/errors_resolve/: errors_resolve.cpp
src/tests/errors_resolve/duplicated_extern_func/: main.o2
src/tests/errors_resolve/duplicated_func_args1/: main.o2
src/tests/errors_resolve/duplicated_func_args1_ptr_struct/: main.o2
src/tests/errors_resolve/duplicated_func_args1_struct/: main.o2
src/tests/errors_resolve/duplicated_func_in_func/: main.o2
src/tests/errors_resolve/duplicated_func_with_body/: main.o2
src/tests/funcs/: funcs.cpp
src/tests/imports/: imports.cpp
src/tests/interfaces/: interfaces.cpp
src/tests/modules/: modules.cpp
src/tests/structs/: structs.cpp
(+67 files in other folders)
